--- a/skillio/profile.html
+++ b/skillio/profile.html
@@ -249,7 +249,7 @@
       // Add profile picture preview
       const previewImg = document.createElement("img");
       previewImg.id = "preview";
-      previewImg.src = data.profilePic || "default_profile.jpg";
+      previewImg.src = data.profilePic || "default_image.jpg";
       previewImg.style.display = data.profilePic ? "block" : "none";
       container.appendChild(previewImg);
 
