--- a/index.html
+++ b/index.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-49YPEVEDNJ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-49YPEVEDNJ');
-</script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SkillSwap – Trade Skills, Not Money</title>
+  <title>Skillio - Swap Skills, Grow Together | skillio.site</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Skillio - The platform where you can swap skills with others. Learn new skills, teach what you know, and grow together. Join our community today!" />
+  <meta name="keywords" content="skill swap, skill exchange, learn skills, teach skills, community, skill sharing, skillio" />
+  <meta name="author" content="Skillio" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Skillio - Swap Skills, Grow Together" />
+  <meta property="og:description" content="The platform where you can swap skills with others. Learn new skills, teach what you know, and grow together." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://skillio.site" />
+  <meta property="og:image" content="https://skillio.site/skillio/skillio%20logo.png" />
+  <meta property="og:site_name" content="Skillio" />
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Skillio - Swap Skills, Grow Together" />
+  <meta name="twitter:description" content="The platform where you can swap skills with others. Learn new skills, teach what you know, and grow together." />
+  <meta name="twitter:image" content="https://skillio.site/skillio/skillio%20logo.png" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="skillio/skillio%20logo.png" />
+  
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX', {
+      'page_title': 'Skillio Homepage',
+      'custom_map': {
+        'dimension1': 'user_type'
+      }
+    });
+  </script>
+  
   <style>
     body {
       margin: 0;
@@ -353,7 +382,10 @@
   </section>
 
   <div class="cta">
-    <a href="skillio/main.html">Start Skill Swapping</a>
+    <div class="cta-buttons">
+      <a href="skillio/auth.html" class="cta-button primary">Get Started</a>
+      <a href="skillio/main.html" class="cta-button secondary">Browse Skills</a>
+    </div>
   </div>
 
   <section class="mission-section">
