--- a/skillio/auth.html
+++ b/skillio/auth.html
@@ -156,7 +156,7 @@
   <script>
     // Initialize EmailJS
     (function() {
-      emailjs.init("YOUR_EMAILJS_USER_ID"); // Replace with your EmailJS user ID
+      emailjs.init("UQRKVlfzmce2tXRBi"); // Your EmailJS public key
     })();
 
     const firebaseConfig = {
@@ -258,7 +258,7 @@
           company_email: 'support@skillio.site'
         };
 
-        await emailjs.send('service_skillio', 'template_welcome', templateParams);
+        await emailjs.send('service_o60m1rw', 'template_5x59vsd', templateParams);
         console.log('Welcome email sent successfully');
       } catch (error) {
         console.error('Error sending welcome email:', error);
