--- a/skillio/auth.html
+++ b/skillio/auth.html
@@ -280,7 +280,7 @@
         const templateParams = {
           to_name: name,
           website_link: 'https://skillio.site',
-          company_email: 'support@skillio.site',
+          company_email: 'reganmant06@gmail.com',  // Your email address
           to_email: email  // Add this back in case template needs it
         };
 
