--- a/skillio/auth.html
+++ b/skillio/auth.html
@@ -392,7 +392,9 @@
     // Check if user is already logged in
     auth.onAuthStateChanged(function(user) {
       if (user) {
-        window.location.href = 'main.html';
+        // Temporarily disable automatic redirect to debug email issue
+        console.log('User logged in, but not redirecting to debug email issue');
+        // window.location.href = 'main.html';
       }
     });
   </script>
