--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       background: rgba(201,242,245,0.8); border-bottom: 1px solid rgba(0,0,0,0.06);
     }
     .nav-wrap{ display:flex; align-items:center; justify-content:space-between; max-width:1100px; margin:0 auto; padding: 10px 16px; }
-    .nav-brand{ display:flex; align-items:center; gap:10px; font-weight:800; }
-    .nav-brand img{ width:36px; height:36px; border-radius:8px; }
+    .nav-brand{ display:flex; align-items:center; }
+    .nav-brand img{ width:64px; height:64px; border-radius:12px; }
     .nav-links{ display:flex; gap:16px; align-items:center; }
     .nav-links a{ text-decoration:none; color:var(--ink); font-weight:600; padding:8px 10px; border-radius:8px; }
     .nav-links a:hover{ background: rgba(0,0,0,0.05); }
@@ -71,11 +71,9 @@
     .nav-cta:hover{ background:var(--primary-dark); }
 
     header { text-align: center; padding: 28px 20px 10px; }
-    header h1 { font-size: 3rem; margin-bottom: 10px; }
-    header p { font-size: 2rem; font-weight: bold; color: white; max-width: 600px; margin: 0 auto; }
 
     /* ===== HERO ===== */
-    .logo-flip { width: 220px; margin: 8px auto 12px; animation: flipLogo 1.5s infinite ease-in-out; display:block; }
+    .logo-flip { width: 240px; margin: 8px auto 12px; animation: flipLogo 1.5s infinite ease-in-out; display:block; }
     @keyframes flipLogo { 0% { transform: rotateY(0deg); } 50% { transform: rotateY(180deg); } 100% { transform: rotateY(360deg); } }
 
     .slogan-container { display:flex; flex-direction:column; align-items:center; justify-content:center; gap:6px; }
@@ -158,9 +156,8 @@
     }
     
     @media (max-width: 768px) {
-      header h1 { font-size: 2rem; }
-      header p { font-size: 1.2rem; padding: 0 10px; }
-      .logo-flip { width: 160px; }
+      .logo-flip { width: 190px; }
+      .nav-brand img{ width:52px; height:52px; }
       .feature img { width: 44px; height: 44px; }
       .feature h3 { font-size: 1rem; }
       .feature p { font-size: 0.9rem; }
@@ -182,7 +179,6 @@
     <div class="nav-wrap">
       <div class="nav-brand">
         <img src="skillio/skillio logo.png" alt="Skillio logo" />
-        <span>Skillio</span>
       </div>
       <div class="nav-links">
         <a href="#features">Features</a>
@@ -312,6 +308,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
