--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
   <!-- ===== FOOTER ===== -->
   <footer>
-    &copy; 2025 SkillSwap. All rights reserved.
+    &copy; 2025 Skillio. All rights reserved.
     <div class="social-block">
       <h3>Follow the Skillio Socials!</h3>
       <div class="social-icons">
